Creacion de rama de interfaz grafica